# accountant-vault-v2

./: .gitignore  README.md  automations.json  index.html
.github/: run_sync.yml
app/backend/: Cargo.toml
app/backend/src/: main.rs
app/backend/src/crypto/: key_derivation.rs  mod.rs  vault_cipher.rs
app/backend/src/db/: schema.rs
app/backend/src/models/: auth.rs  mod.rs  vault.rs
app/backend/src/services/: mod.rs  vault_service.rs
app/docs/: bootstrap.md  security-architecture.md
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx
app/frontend/src/components/: SecurityOverview.tsx
app/frontend/src/features/auth/: UnlockScreen.tsx
app/frontend/src/features/vault/: VaultHome.tsx
app/frontend/src/lib/: portalCatalog.ts  storage.ts  types.ts
app/frontend/src/styles/: app.css
assets/: index-CDuiQy7O.js  index-CTiUBzyu.css
scripts/: vault_engine.py
