[package]
name = "accountant_vault_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
